--- a/redisFeatures/src/main/resources/application.yml
+++ b/redisFeatures/src/main/resources/application.yml
@@ -1,11 +1,10 @@
 spring:
   redis:
-    host: 127.0.0.1
+    host: 81.68.85.222
     port: 6379
-    timeout: 10s
     lettuce:
       pool:
-        min-idle: 0
-        max-idle: 8
-        max-active: 8
-        max-wait: -1m
+        max-active: 1000
+        min-idle: 2
+        max-idle: 1000
+        max-wait: 10ms
